feat: 策略模式+单例实现可配置的开火模式

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -4,3 +4,6 @@ tankSpeed=5
 bulletSpeed=10
 gameWidth=800
 gameHeight=600
+#fireStrategy
+goodFs=cn.stepin.tank.FourDirFireStrategy
+badFs=cn.stepin.tank.DefaultFireStrategy
