feat: 抽象工厂实现坦克、子弹、爆炸一簇的可配置

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -7,3 +7,4 @@ gameHeight=600
 #fireStrategy
 goodFs=cn.stepin.tank.FourDirFireStrategy
 badFs=cn.stepin.tank.DefaultFireStrategy
+gameFactory=cn.stepin.tank.absractfactory.DefaultFactory
