refactor: 为策略相关类新增strategy包名

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -5,5 +5,5 @@ bulletSpeed=10
 gameWidth=800
 gameHeight=600
 #fireStrategy
-goodFs=cn.stepin.tank.FourDirFireStrategy
-badFs=cn.stepin.tank.DefaultFireStrategy
+goodFs=cn.stepin.tank.strategy.FourDirFireStrategy
+badFs=cn.stepin.tank.strategy.DefaultFireStrategy
