--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -7,3 +7,5 @@ gameHeight=600
 #fireStrategy
 goodFs=cn.stepin.tank.strategy.FourDirFireStrategy
 badFs=cn.stepin.tank.strategy.DefaultFireStrategy
+#colliders
+colliders=cn.stepin.tank.cor.BulletTankCollider,cn.stepin.tank.cor.TankTankCollider
