feat: 增加障碍物-墙并实现墙与其他物体的碰撞检测

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,5 @@
 #tanks count at initialization
-initTankCount=30
+initTankCount=10
 tankSpeed=5
 bulletSpeed=10
 gameWidth=800
@@ -8,4 +8,4 @@ gameHeight=600
 goodFs=cn.stepin.tank.strategy.FourDirFireStrategy
 badFs=cn.stepin.tank.strategy.DefaultFireStrategy
 #colliders
-colliders=cn.stepin.tank.cor.BulletTankCollider,cn.stepin.tank.cor.TankTankCollider
+colliders=cn.stepin.tank.cor.BulletTankCollider,cn.stepin.tank.cor.TankTankCollider,cn.stepin.tank.cor.BulletWallCollider,cn.stepin.tank.cor.TankWallCollider
